@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171118"
-#define public MagickPackageReleaseDate "snapshot-20171118"
+#define public MagickPackageVersionAddendum ".020171119"
+#define public MagickPackageReleaseDate "snapshot-20171119"
