@@ -1,3 +1,8 @@
+2017-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/{rle.c, mat.c, xbm.c, sgi.c, png.c}: Eliminate size_t vs
+	unsigned 32 conversion warnings in WIN64 build.
+
 2017-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* tiff: Import libtiff 4.0.9.
